Painting/assets/css/style.css
/* HEADER */
/* Header Navbar */
.header__content-bar{
    padding: 5px 0;
    border-bottom: 1px solid rgba(0, 0, 0, .1);
    background: #ffffff;
    height: 117px;
}

/* Logo */
.header__navbar-logo-link{
    display: block;
}

.header__navbar-logo-icon{
    width: 100%;
}

/* Search */
.header__navbar-search{
    background-color: var(--white-color);
    height: 40px;
    flex: 1;
    border-radius: 2px;
    display: flex;
    align-items: center;
    margin: 10px 0;
}

.header__navbar-search-input{
    width: 100%;
    height: 100%;
    border: none;
    outline: none;
    font-size: 0.9rem;
    color: var(--text-color);
    padding: 0 16px;
    border-radius: 3px;
    background-color: #f5f6f7;
}

/* Account & Cart */
.header__navbar-account,
.header__navbar-cart{
    display: flex;
    align-items: center;
    margin: 4px 0;
}

.header__navbar-account-svg{
    width: 24px;
    height: 24px;
}

.header__navbar-account-img{
    width: 100%;
}

.header__navbar-account-menu,
.header__navbar-cart-box{
    margin: 3px;
}

.header__navbar-account-user,
.header__navbar-cart-mine{
    font-weight: bold;
    font-size: 12px;
    color: #212121;
}

.header__navbar-cart-mine a{
    text-decoration: none;
    color: #212121;
}

.header__navbar-cart-mine a:hover{
    text-decoration: none;
    color: #212121;
}

.header__navbar-account-function{
    display: flex;
    justify-content: space-between;
}

.header__navbar-account-register,
.header__navbar-account-login,
.header__navbar-ship-link{
    font-size: 12px;
    color: #999;
    text-decoration: none;
}

.header__navbar-account-login{
    margin-right: 5px;
}

.header__navbar-account-register:hover,
.header__navbar-account-login:hover,
.header__navbar-ship-link:hover{
    text-decoration: none;
    color: var(--primary-color);
}

.header__cart-wrap{
    position: relative;
}

.header__navbar-cart{
    position: relative;
}

.header__cart-wrap:hover .header__cart-list{
    display: block;
}

.header__navbar-cart-notice{
    position: absolute;
    top: 10px;
    left: -17px;
    background-color: orange;
    border-radius: 50%;
    width: 15px;
    height: 15px;
    display: flex;
    justify-content: center;
    align-items: center;
    color: var(--white-color);
    font-size: 14px;
    text-decoration: none;
    color: var(--white-color);
}

.header__navbar-cart-notice:hover{
    text-decoration: none;
    color: var(--white-color);
}

.header__navbar-ship{
    margin-top: -4px;
}

.header__cart-list{
    display: none;
    position: absolute;
    background-color: var(--white-color);
    right: 40px;
    width: 250px;
    max-height: 375px;
    border: 1px solid #d7d7d7;
    padding: 15px 10px;
    top: 48px;
    box-shadow: 4px 4px 3px #aaa;
    z-index: 2;
    transform-origin: top;
    will-change: opacity, transform;
    animation: headerCartGrowth linear .3s;
}

@keyframes headerCartGrowth{
    from{
        opacity: 0;
        transform: scaleY(0);
    }
    to{
        opacity: 1;
        transform: scaleY(1);
    }
}

.header__cart-list::before{
    float: left;
    width: 17px;
    height: 10px;
    right: 40px;
    content: "";
    position: absolute;
    top: -10px;
    background: url(//theme.hstatic.net/1000107366/1000415407/14/up-arrow.gif?v=318);
}

.header__cart-list::after{
    content: "";
    position: absolute;
    width: 100%;
    height: 20px;
    top: -12px;
    left: 0;
}

/* No Cart */
.header__cart--no-list .header__cart-list-no-cart-msg{
    display: block;
}

.header__cart-list-no-cart-msg{
    font-size: 14px;
    font-weight: 450;
    display: none;
}

/* Has Cart */
.header__cart-list-item{
    padding-left: 0;
    list-style: none;
}

.header__cart-item{
    display: flex;
    align-items: center;
    margin-bottom: 10px;
}

.header__cart-img-link{
    text-decoration: none;
    color: transparent;
}

.header__cart-img{
    width: 80px;
    height: 80px;
}

.header__cart-item-name{
    font-size: 13px;
    color: #333;
    float: left;
    width: 100%;
    font-weight: bold;
    text-decoration: none;
    overflow: hidden;
    display: block;
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 2;
}

.header__cart-item-name:hover{
    text-decoration: none;
    color: #333;
}

.header__cart-item-quantity,
.header__cart-item-price{
    font-size: 12px;
    float: left;
    width: 100%;
    color: #666;
}

.header__cart-list-line{
    border: 1px dashed #dfdfdf;
    margin: 5px 0;
    float: left;
    width: 100%;
}

.header__cart-pay{
    font-size: 14px;
    font-weight: 450;
    width: 100%;
}

.header__cart-total{
    float: left;
}

.header__cart-money{
    float: right;
}

.header__cart-function{
    display: inline-flex;
    justify-content: space-between;
    font-size: 11px;
    width: 100%;
}

.header__cart-link-to-cart{
    background-color: #fff;
    border: 1px solid #333;
    font-size: 10px;
    text-align: center;
    text-transform: uppercase;
    padding: 4px 4px;
    position: relative;
    z-index: 2;
    float: left;
    width: 42%;
    white-space: nowrap;
    margin-top: 10px;
    color: #333;
    font-weight: bold;
    text-decoration: none;
}

.header__cart-link-to-cart:hover{
    text-decoration: none;
    color: #333;
}

.header__cart-link-to-checkout{
    color: #dfdfdf;
    background: #333;
    border: 1px solid #333;
    font-size: 10px;
    text-align: center;
    text-transform: uppercase;
    padding: 4px 4px;
    position: relative;
    float: right;
    width: auto;
    width: 42%;
    white-space: nowrap;
    margin-top: 10px;
    font-weight: 400;
    z-index: 2;
    text-decoration: none;
}

.header__cart-link-to-checkout:hover{
    text-decoration: none;
    color: #dfdfdf;
}

/* Header Menu Bar */
.header__menu-bar{
    height: 40px;
}
.header__menu-list{
    list-style: none;
    padding: 9px 0 10px 0;
    display: flex;
    width: 100%;
    justify-content: space-evenly;
    position: relative;
}
/* ... */

